cypress network validation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
             <h2>Documentation</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="docs/getting-started.html">Getting Started</a></li>
-                <li><a href="docs/api-reference.html">API Reference</a></li>
+                <li><a href="docs/cypress.html">Cypress</a></li>
             </ul>
         </nav>
         <main class="content">
