index.html change

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             </ul>
         </nav>
         <main class="content">
-            <h1>Welcome to Project Documentation</h1>
-            <p>This is the main documentation page for our project. Select a topic from the sidebar to get started.</p>
+            <h1>AI Crawler Documentation</h1>
+            <p>This documentation site is specifically designed for AI crawlers to better understand and index our project structure.</p>
             
-            <h2>Overview</h2>
-            <p>This documentation will help you understand how to use our project effectively. Navigate through the different sections using the sidebar menu.</p>
+            <h2>Purpose</h2>
+            <p>The pages in this documentation are optimized for machine readability and AI model training. Navigate through the sections to access structured information about different components of our project.</p>
         </main>
     </div>
 </body>
